--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,28 @@
 <resources>
     <string name="app_name">Cristina Lozano Beauty</string>
     <string name="nav_bar_home">Inicio</string>
-    <string name="nav_bar_client">Clientes</string>
+    <string name="nav_bar_client">Clientas</string>
     <string name="nav_bar_message">Mensajes</string>
+
+    <!--Message-->
     <string name="message_label_name">Nombre:</string>
     <string name="message_label_phone">Teléfono:</string>
     <string name="message_label_appointment_time">Hora de la visita:</string>
     <string name="message_action_send">Enviar</string>
+
+    <!--Home-->
     <string name="home_events">Eventos</string>
+
+    <!--Client-->
     <string name="client_list_add_client">Añadir clienta</string>
     <string name="client_detail_title">Clienta</string>
+    <string name="client_form_title">Nueva clienta</string>
+
+    <!--Form-->
+    <string name="client_form_name">Nombre</string>
+    <string name="client_form_last_name">Apellidos</string>
+    <string name="client_form_phone">Teléfono</string>
+    <string name="client_form_prefix_phone">+34</string>
+    <string name="client_form_email">Email</string>
+    <string name="client_form_action_save">Guardar</string>
 </resources>
