--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,9 @@
 
     <!--Color history form-->
     <string name="color_history_form_title">Nuevo color</string>
-    <string name="color_history_form_name">Nombre</string>
+    <string name="color_history_form_brand">Marca</string>
+    <string name="color_history_form_select_nail_polish_brand">Selecciona una marca de esmalte de uñas</string>
+    <string name="color_history_form_reference">Referencia</string>
     <string name="color_history_form_date">Fecha</string>
     <string name="color_history_form_action_save">Guardar</string>
 
