--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,13 +108,13 @@
     <string name="dialog_calendar_event_select_service">Selecciona un servicio</string>
     <string name="dialog_calendar_event_clients">Clienta</string>
     <string name="dialog_calendar_event_service">Servicio</string>
-    <string name="dialog_calendar_hint_title_event">Título del evento</string>
     <string name="dialog_calendar_hint_start_time_event">Hora inicio (HH:mm)</string>
     <string name="dialog_calendar_hint_end_time_event">Hora fin (HH:mm)</string>
 
     <!--Event form error-->
     <string name="calendar_event_form_error_time">Indica las horas de la cita correctamente</string>
     <string name="calendar_event_form_error_create">No se ha podido registrar la cita</string>
+    <string name="calendar_event_form_error_update">No se ha podido modificar la cita</string>
     <string name="calendar_event_form_error_delete">No se ha podido eliminar la cita</string>
 
 </resources>
