--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <!--Appointment history list-->
     <string name="appointment_history_list_title">Historial de citas</string>
     <string name="appointment_history_list_error_list">No se han podido cargar las citas</string>
+    <string name="appointment_history_list_error_update">No se ha podido modificar la cita</string>
     <string name="appointment_history_list_error_delete">No se ha podido eliminar la cita</string>
 
     <!--Appointment history list dialog-->
