Change design for seach client list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="client_list_add_client">Añadir clienta</string>
     <string name="client_list_error_list">No se han podido cargar las clientas</string>
     <string name="client_list_error_delete">No se ha podido eliminar la clienta</string>
-    <string name="client_list_search">Buscar…</string>
+    <string name="client_list_search">Buscar por nombre o teléfono</string>
 
     <!--Client list dialog-->
     <string name="dialog_delete_client_title">Eliminar clienta</string>
