Change message_reminder_birthday_message string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,6 @@
     <string name="message_reminder_sending_reminder_error">Error al enviar el recordatorio</string>
     <string name="message_reminder_sending_birthday_greeting_error">Error al enviar la felicitación de cumpleaños</string>
     <string name="message_reminder_appointment_message">Hola %s!\nRecordatorio de tu cita con Cristina Lozano Beauty en estética e imatge: día %s a las %s.\n\nConsulta o cambia tu cita escribiéndonos a este Whatsapp \uD83D\uDE03</string>
-    <string name="message_reminder_birthday_message">Hola %s!\nDesde Cristina Lozano Beauty queremos felicitarte por tu cumpleaños\n¡Muchas felicidades! \uD83D\uDE03</string>
+    <string name="message_reminder_birthday_message">Holi %s!\nQuería felicitarte por tu cumpleaños\n¡Muchas felicidades!</string>
 
 </resources>
